--- a/Frontend/automatic-feeder-app/src/app/app.component.html
+++ b/Frontend/automatic-feeder-app/src/app/app.component.html
@@ -1,1 +1,3 @@
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 <router-outlet></router-outlet>
