--- a/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
@@ -1,7 +1,7 @@
 body {
     overflow: hidden; /* Hide scrollbars */
 }
-/* 
+
 @media only screen and (max-width: 800px) {
     .feed-button {
         margin: 0px auto;
@@ -27,27 +27,22 @@ body {
         font-size: 24vw;
         
     }
-} */
+}
 
-/* @media only screen and (min-width: 800px) { */
+@media only screen and (min-width: 800px) {
     .feed-button {
         margin: 0px auto;
-        /* margin-top: 5vw;
+        margin-top: 5vw;
         width: 25vw;
         height: 25vw;
-        border-radius: 12.5vw; */
-        margin-top: 70px;
-        width: 400px;
-        height: 400px;
-        border-radius: 200px;
+        border-radius: 12.5vw;
         border: solid white 5px;
         background-color: #7fc556;
         position:relative;
         -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
         -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
         box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        /* font-size: 10vw; */
-        font-size: 180px;
+        font-size: 10vw;
         color: white;
         -webkit-transition: all 0.2s ease-in;
         -moz-transition: all 0.2s ease-in;
@@ -57,10 +52,10 @@ body {
 
     .feed-button:hover {
         background-color: #89d65d;
-        /* font-size: 12vw; */
-        font-size: 220px;
+        font-size: 12vw;
+        
     }
-
+}
 
 
 
@@ -70,8 +65,7 @@ body {
     background: -moz-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
     background: -o-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
     background: linear-gradient(to bottom right, whitesmoke, #7eaacd);
-    /* font-family: Verdana, Geneva, sans-serif; */
-    font-family: "Roboto", sans-serif;
+    font-family: Verdana, Geneva, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     position: absolute;
@@ -84,8 +78,7 @@ body {
 
 h2 {
     margin: 10px;
-    color: #5683c5;
-    font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    color: slategray;
 }
 
 .amount-container {
@@ -136,6 +129,7 @@ h2 {
     padding: 0;
     margin: 0 auto;
     margin-top: 10px;
+    width: 65px;
     text-align: center;
     font-family: 'Roboto';
     letter-spacing: 1px;
@@ -169,72 +163,4 @@ button:focus {
     width: 120px;
     border-radius: 60px;
     border: 15px solid white;
-}
-
-.menu-container {
-    padding-top: 40px;
-}
-
-#home-button {
-    background-color: #7fc556;
-}
-
-#schedule-button {
-    background-color: #ffc04b;
-}
-
-#info-button {
-    background-color: #5683c5;
-}
-
-.menu-button {
-    position: relative;
-    color: white;
-    border: none;
-    margin-left: -120px;
-    width: 200px;
-    height: 80px;
-    font-size: 20px;
-    border-radius: 0 20px 20px 0;
-    text-align: right;
-    padding: 15px 20px 0 0;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-}
-
-.menu-text {
-    visibility: hidden;
-    -moz-opacity:0; 
-    filter:alpha(opacity=0); 
-    opacity:0;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-}
-
-@media only screen and (max-width: 800px) {
-    .menu-button:hover {
-        width: 240px;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-    .menu-button:hover {
-        margin-left: 0px;
-    }
-    .menu-button:hover .menu-text {
-        visibility: visible;
-        -moz-opacity:1; 
-        filter:alpha(opacity=1); 
-        opacity:1;
-        transition-delay: 0.2s;
-    }
-}
-
-#amount-help {
-    margin: 0;
-    font-size: 20px;
 }
