--- a/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
@@ -65,13 +65,11 @@ body {
 
 
 #box-div {
-    background: #7eaacd;
+    background: #7eaacd; /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
     background: -moz-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
     background: -o-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
     background: linear-gradient(to bottom right, whitesmoke, #7eaacd);
-    background-image: url(https://wallpapercave.com/wp/hBL8JnS.jpg);
-    background-position-y: center;
     /* font-family: Verdana, Geneva, sans-serif; */
     /* font-family: "Roboto", sans-serif; */
     font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -85,22 +83,10 @@ body {
     overflow: hidden; /* Hide scrollbars */
 }
 
-.topbar-title-container {
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 6px;
-    color: #ffc04b;
+h2 {
+    margin: 10px;
+    color: #5683c5;
     font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
-.topbar-time-container {
-    text-align: center;
-    margin-top: 12px;
-    color: #ffc04b;
-}
-
-.topbar {
-    background-color: #212529;
 }
 
 .amount-container {
@@ -121,6 +107,9 @@ body {
     border: none;
     border-radius: 30px;
     font-size: 18px;
+    -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 10px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.5);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
