--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.css
@@ -89,9 +89,30 @@ body {
     text-align: center;
     margin-top: 10px;
     margin-bottom: 6px;
+    font-size: 22px;
     color: #ffc04b;
     font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.topbar-title-container a {
+    color: #ffc04b;
+}
+
+a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
 
 .topbar-time-container {
     text-align: center;
