--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
@@ -15,7 +15,7 @@
                 <a routerLink="/home">Automatic Feeder</a>
             </div>
             <div class="col-4 topbar-time-container">
-                {{ time | date: 'hh:mm:ss a' }}
+                {{ time | date: 'HH:mm:ss' }}
             </div>
         </div>
         <div class="row">
