--- a/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.css
+++ b/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.css
@@ -3,59 +3,44 @@
     border: none;
     background-color: whitesmoke;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-.thumbnail {
-    /*width: 150px;*/
-    width: 100%;
-    height: 80px;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    object-fit: cover;
-}
-
-.small-text {
-    font-size: smaller;
+.title-container {
     font-weight: 100;
+    padding: 25px 0 20px 20px;
 }
 
-.vehicle-title {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.price-text {
-    margin-top: 25px;
+.amount-container {
     text-align: center;
+    padding: 20px 0 20px 0;
 }
 
-.delete-button {
+.toggler-container {
+    text-align: right;
+    padding: 30px 0 20px 0;
+}
+
+.title {
     margin: auto;
-    margin-top: 30px;
-    width: 30px;
-    height: 30px;
-    border: solid lightgray 1px;
-    border-radius: 5px;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
 
-.delete-button:hover {
-    background-color: #3F51B5;
-    color: white;
+.amount-dot {
+    margin: 3px;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
 
-.date-text {
-    font-size: smaller;
-    font-weight: lighter;
-    margin-top: 25px;
+.black-text {
+    color: black;
 }
 
-.date-div {
-    width: 400px;
-}
-
-.checkbox-div {
-    padding-top: 40px;
+.faded-text {
+    color: rgba(0, 0, 0, 0.3);
 }
