--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
@@ -8,7 +8,6 @@
     </div>
 </div> -->
 
-<div id="box-div">
     <div id="content-div">
         <div class="row topbar">
             <div class="col-4 topbar-title-container">
@@ -57,15 +56,13 @@
                     </button>
                 </div>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8 col-10">
                 <router-outlet></router-outlet>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2">
                 <!-- <button class="schedule-button" (click)="this.router.navigate(['/schedule']);">
                     <fa-icon [icon]="clock"></fa-icon>
                 </button> -->
             </div>
         </div>
     </div>
-
-</div>
