--- a/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/button-page/button-page.component.css
@@ -1,97 +1,47 @@
 body {
     overflow: hidden; /* Hide scrollbars */
 }
-/* 
-@media only screen and (max-width: 800px) {
-    .feed-button {
-        margin: 0px auto;
-        margin-top: 5vw;
-        width: 50vw;
-        height: 50vw;
-        border-radius: 25vw;
-        border: solid white 5px;
-        background-color: #7fc556;
-        position:relative;
-        -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        font-size: 20vw;
-        color: white;-webkit-transition: all 0.2s ease-in;
-        -moz-transition: all 0.2s ease-in;
-        -o-transition: all 0.2s ease-in;
-        transition: all 0.2s ease-in;
-    }
 
-    .feed-button:hover {
-        background-color: #89d65d;
-        font-size: 24vw;
-        
-    }
-} */
-
-/* @media only screen and (min-width: 800px) { */
-    .feed-button {
-        margin: 0px auto;
-        /* margin-top: 5vw;
-        width: 25vw;
-        height: 25vw;
-        border-radius: 12.5vw; */
-        margin-top: 70px;
-        width: 400px;
-        height: 400px;
-        border-radius: 200px;
-        border: solid white 5px;
-        background-color: #7fc556;
-        position:relative;
-        -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-        /* font-size: 10vw; */
-        font-size: 180px;
-        color: white;
-        -webkit-transition: all 0.2s ease-in;
-        -moz-transition: all 0.2s ease-in;
-        -o-transition: all 0.2s ease-in;
-        transition: all 0.2s ease-in;
-    }
-
-    .feed-button:hover {
-        background-color: #89d65d;
-        /* font-size: 12vw; */
-        font-size: 220px;
-    }
-
-
-
-
-#box-div {
-    background: #7eaacd; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
-    background: -moz-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
-    background: -o-linear-gradient(to bottom right,  whitesmoke, #7eaacd);
-    background: linear-gradient(to bottom right, whitesmoke, #7eaacd);
-    /* font-family: Verdana, Geneva, sans-serif; */
-    /* font-family: "Roboto", sans-serif; */
-    font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height: 100%;
-    overflow: hidden; /* Hide scrollbars */
+.feed-button {
+    margin: 0px auto;
+    /* margin-top: 5vw;
+    width: 25vw;
+    height: 25vw;
+    border-radius: 12.5vw; */
+    /* margin-top: 70px;
+    width: 400px;
+    height: 400px;
+    border-radius: 200px; */
+    margin-top: 8vh;
+    width: 50vh;
+    height: 50vh;
+    border-radius: 25vh;
+    border: solid white 5px;
+    background-color: #7fc556;
+    position:relative;
+    -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    /* font-size: 10vw; */
+    /* font-size: 180px; */
+    font-size: 24vh;
+    color: white;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
 }
 
-h2 {
-    margin: 10px;
-    color: #5683c5;
-    font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+.feed-button:hover {
+    background-color: #89d65d;
+    /* font-size: 12vw; */
+    /* font-size: 220px; */
+    font-size: 28vh;
 }
 
 .amount-container {
     margin: auto;
-    margin-top: 30px;
+    margin-top: 3vh;
     width: 400px;
 }
 
@@ -102,14 +52,18 @@ h2 {
 
 .amount-button {
     margin-left: 20px;
+    border: none;
     width: 60px;
     height: 60px;
-    border: none;
     border-radius: 30px;
     font-size: 18px;
+    /* width: 8vh;
+    height: 8vh;
+    border-radius: 4vh;
+    font-size: 2.5vh; */
     -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-    box-shadow:0 1px 10px rgba(0, 0, 0, 0.8), 0 0 40px rgba(0, 0, 0, 0.5);
+    box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
@@ -123,6 +77,7 @@ h2 {
 .amount-button:hover:not(:disabled) {
     background-color: white;
     font-size: 21px;
+    /* font-size: 2.9vh; */
 }
 
 .amount-dots-container {
@@ -134,6 +89,7 @@ h2 {
 .amount-dot {
     margin: 0 5px;
     font-size: 25px;
+    /* font-size: 3.5vh; */
 }
 
 .amount-label-container {
@@ -148,94 +104,6 @@ h2 {
 
 button:focus {
     outline: none;
-}
-
-.schedule-button {
-    margin-top: 50px;
-    margin-left: 10px;
-    height: 100px;
-    width: 100px;
-    border: 5px solid white;
-    background-color: #008080;
-    color: white;
-    font-size: 25px;
-    border-radius: 50px;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.3s ease-in;
-}
-
-.schedule-button:hover {
-    margin-top: 40px;
-    margin-left: 0px;
-    height: 120px;
-    width: 120px;
-    border-radius: 60px;
-    border: 15px solid white;
-}
-
-.menu-container {
-    padding-top: 40px;
-}
-
-#home-button {
-    background-color: #7fc556;
-}
-
-#schedule-button {
-    background-color: #ffc04b;
-}
-
-#info-button {
-    background-color: #5683c5;
-}
-
-.menu-button {
-    position: relative;
-    color: white;
-    border: none;
-    margin-left: -120px;
-    width: 200px;
-    height: 80px;
-    font-size: 20px;
-    border-radius: 0 20px 20px 0;
-    text-align: right;
-    padding: 15px 20px 0 0;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-}
-
-.menu-text {
-    visibility: hidden;
-    -moz-opacity:0; 
-    filter:alpha(opacity=0); 
-    opacity:0;
-    -webkit-transition: all 0.2s ease-in;
-    -moz-transition: all 0.2s ease-in;
-    -o-transition: all 0.2s ease-in;
-    transition: all 0.2s ease-in;
-}
-
-@media only screen and (max-width: 800px) {
-    .menu-button:hover {
-        width: 240px;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-    .menu-button:hover {
-        margin-left: 0px;
-    }
-    .menu-button:hover .menu-text {
-        visibility: visible;
-        -moz-opacity:1; 
-        filter:alpha(opacity=1); 
-        opacity:1;
-        transition-delay: 0.2s;
-    }
 }
 
 #amount-help {
