--- a/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
@@ -1,3 +1,7 @@
+button:focus {
+    outline: none;
+}
+
 .status-container {
     display: flex;
     justify-content: center;
@@ -10,4 +14,29 @@
     /* height: 100vh;
     overflow-y: auto; */
     padding-bottom: 100px;
+}
+
+.controls-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.controls-button {
+    margin: 0 0 20px 20px;
+    width: 60px;
+    height: 60px;
+    border: none;
+    border-radius: 30px;
+    font-size: 18px;
+    /* -webkit-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 10px rgba(0, 0, 0, 0.3); */
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+.cards-container {
+    padding: 0;
 }
