--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar topbar navbar-expand-md navbar-dark fixed-top">
+<nav class="navbar topbar navbar-expand-lg navbar-dark fixed-top">
     <a class="navbar-brand topbar-title-container" routerLink="/home">Automatic Feeder</a>
-    <!-- <div class="topbar-time-container">
+    <!-- <span class="topbar-time-container navbar-text">
         {{ time | date: 'HH:mm:ss' }}
-    </div> -->
+    </span> -->
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -10,16 +10,28 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav text-uppercase ml-auto">
-            <li class="nav-item" [routerLinkActive]="['active']">
-                <a class="nav-link" routerLink="/home">Home <span
-                        class="sr-only">(current)</span></a>
+        <ul class="navbar-nav">
+            <li class="nav-item nav-home" [routerLinkActive]="['active']">
+                <a class="nav-link" routerLink="/home">
+                    <fa-icon [icon]="home"></fa-icon>
+                    <br>
+                    Home 
+                    <span class="sr-only">(current)</span>
+                    </a>
             </li>
-            <li class="nav-item" [routerLinkActive]="['active']">
-                <a class="nav-link" routerLink="/schedule">Schedule</a>
+            <li class="nav-item nav-schedule" [routerLinkActive]="['active']">
+                <a class="nav-link" routerLink="/schedule">
+                    <fa-icon [icon]="clock"></fa-icon>
+                    <br>
+                    Schedule
+                </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/schedule">About</a>
+            <li class="nav-item nav-about">
+                <a class="nav-link" routerLink="/schedule">
+                    <fa-icon [icon]="info"></fa-icon>
+                    <br>
+                    About
+                </a>
             </li>
         </ul>
     </div>
@@ -27,7 +39,7 @@
 <div id="content-div">
 
     <div class="row">
-        <div class="col-md-2 hidden-xs hidden-sm menu-container">
+        <div class="col-lg-2 hidden-xs hidden-sm menu-container">
             <div class="row">
                 <button class="menu-button" id="home-button" (click)="this.router.navigate(['/home']);">
                     <div class="row">
@@ -65,13 +77,48 @@
                 </button>
             </div>
         </div>
-        <div class="col-md-8 col-12">
+        <div class="col-lg-8 col-12" style="padding-right: 0;">
             <router-outlet></router-outlet>
         </div>
-        <div class="col-md-2 hidden-xs hidden-sm ">
-            <!-- <button class="schedule-button" (click)="this.router.navigate(['/schedule']);">
-                    <fa-icon [icon]="clock"></fa-icon>
-                </button> -->
+        <div class="col-lg-2 hidden-xs hidden-sm">
+            <!-- <div class="row">
+                <button class="menu-button" id="home-button" (click)="this.router.navigate(['/home']);">
+                    <div class="row">
+                        <div class="col-3">
+                            <fa-icon [icon]="home"></fa-icon>
+                        </div>
+                        <div class="col-9">
+                            <p class="menu-text">Home</p>
+                        </div>
+                    </div>
+                </button>
+            </div>
+            <div class="row">
+                <button class="menu-button" id="schedule-button" (click)="this.router.navigate(['/schedule']);">
+                    <div class="row">
+                        <div class="col-3">
+                            <fa-icon [icon]="clock"></fa-icon>
+                        </div>
+                        <div class="col-9">
+                            <p class="menu-text">Schedule</p>
+                        </div>
+                        
+                    </div>
+                </button>
+            </div>
+            <div class="row">
+                <button class="menu-button" id="info-button">
+                    <div class="row">
+                        <div class="col-3">
+                            <fa-icon [icon]="info"></fa-icon>
+                        </div>
+                        <div class="col-9">
+                            <p class="menu-text">About</p>
+                        </div>
+                        
+                    </div>
+                </button>
+            </div> -->
         </div>
     </div>
 </div>
