--- a/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.css
@@ -14,6 +14,7 @@ button:focus {
     /* height: 100vh;
     overflow-y: auto; */
     padding-bottom: 100px;
+    padding-right: 0;
 }
 
 .controls-container {
