--- a/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.css
+++ b/Frontend/automatic-feeder-app/src/app/cards/schedule-card/schedule-card.component.css
@@ -1,4 +1,5 @@
 .container {
+    margin: 0;
     width: 100%;
     border: none;
     background-color: rgba(245, 245, 245, 0.9);
@@ -17,6 +18,10 @@
 .title-container {
     font-weight: 100;
     padding: 42px 0 45px 20px;
+    -webkit-transition: background-color 0.2s ease-in;
+    -moz-transition: background-color 0.2s ease-in;
+    -o-transition: background-color 0.2s ease-in;
+    transition: background-color 0.2s ease-in;
 }
 
 .amount-container {
@@ -51,4 +56,25 @@
 
 .faded-text {
     color: rgba(0, 0, 0, 0.3);
+}
+
+.delete-container {
+    padding: 42px;
+}
+
+.delete-button {
+    border: none;
+    background-color: transparent;
+    margin: auto;
+    height: 30px;
+    width: 30px;
+    font-size: 22px;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+.delete-button:hover {
+    color: black;
 }
