--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.css
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.css
@@ -1,5 +1,5 @@
 html, body {
-    overflow: hidden; /* Hide scrollbars */
+    /* overflow: hidden; */
 }
 
 a:link {
@@ -38,7 +38,7 @@ a:active {
     left:0;
     width:100%;
     height: 100%;
-    overflow-x: hidden; /* Hide scrollbars */
+    overflow-x: hidden;
 }
 
 .navbar-collapse {
