--- a/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/landing-page/landing-page.component.html
@@ -77,7 +77,7 @@
                 </button>
             </div>
         </div>
-        <div class="col-lg-8 col-12" style="padding-right: 0;">
+        <div class="col-lg-8 col-12" >
             <router-outlet></router-outlet>
         </div>
         <div class="col-lg-2 hidden-xs hidden-sm">
