--- a/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.html
+++ b/Frontend/automatic-feeder-app/src/app/pages/schedule-page/schedule-page.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="row">
         <div class="col-12 status-container">
@@ -8,15 +9,25 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 controls-container">
-            <button class="controls-button"><fa-icon [icon]="plus"></fa-icon></button>
+        <!-- [ngClass]="{'mat-elevation-z5' : true, 'controls-container-sticky' : isSticky}" -->
+        <div class="col-12 controls-container" >
+            <button class="controls-button" [ngClass]="deleteMode ? 'transparent' : 'non-transparent'" [disabled]="deleteMode"><fa-icon [icon]="plus"></fa-icon></button>
             <button class="controls-button" (click)="changeDeleteMode()"><fa-icon [icon]="trash"></fa-icon></button>
         </div>
     </div>
     <div class="row">
         <div class="col-12 cards-container">
-            <schedule-card *ngFor="let f of feedings" [item]="f" [deleteMode]="false"
+            <schedule-card *ngFor="let f of feedings" [item]="f" [deleteMode]="deleteMode"
                 (enabledChanged)="changeNextFeeding($event)"></schedule-card>
         </div>
+    </div>
+    <div class="row delete-controls-container" [ngClass]="deleteMode ? 'delete-controls-container-extended' : 'delete-controls-container-collapsed'">
+        <div class="col-6 delete-controls-container2">
+            <button class="delete-controls-button" (click)="changeDeleteMode()">Delete All</button>
+        </div>
+        <div class="col-6 delete-controls-container2">
+            <button class="delete-controls-button" (click)="changeDeleteMode()">Cancel</button>
+        </div>
+        
     </div>
 </div>
